idf_component_register(
    SRCS 
        "main.cpp"
        "app_layer/vld1_application.cpp"
    INCLUDE_DIRS 
        "." 
        "app_layer"
    REQUIRES
        driver
        freertos
        averager
        led
        rs485_slave
        uart
        vld1
        web_server
        esp_http_server 
        esp_wifi 
        nvs_flash
)
